@startuml
'https://plantuml.com/class-diagram

abstract BankAccount
class SavingsAccount
class CheckingAccount

BankAccount <-- CheckingAccount
BankAccount <-- SavingsAccount

abstract BankAccount {
    -int id
    -double balance

    +double getBalance()
    +void deposit(double amount)
    +void extract(double amount)
    #boolean canExtract(double amount)
}

class CheckingAccount {
    -double overdraftAmount

    +CheckingAccount(int id, double overdraftAmount)
}

class SavingsAccount {
    +SavingsAccount(int id)
}

@enduml